# mwcas-aopt

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: unit_tests.yaml
include/aopt/: aopt_descriptor.hpp  utility.hpp
include/aopt/component/: common.hpp  mwcas_field.hpp  word_descriptor.hpp
test/: CMakeLists.txt  aopt_descriptor_test.cpp  common.hpp  mwcas_field_test.cpp  word_descriptor_test.cpp
